Problem solved for publisher video not showing by changing what is shown on default

--- a/learnlive/learnlive/static/query_parser/home.css
+++ b/learnlive/learnlive/static/query_parser/home.css
@@ -47,7 +47,7 @@
 	width: 100%;
 	height:100%;
 	right: 0;
-	display: block;
+	display: none;
 }
 
 #toggle {
@@ -60,9 +60,10 @@
 
 #myPublisher {
 	z-index: 10;
-	margin-right: 2945px;
+	margin-right: 30px;
 	margin-bottom: 5px;
 }
+
 #chatWindow {
 	z-index: 10;
 	margin-right: 30px;
